language/move-prover/tests/sources/functional/serialize_model.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/serialize_model.move:34:9 ───
    │
 34 │         ensures result_1 == result_2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/serialize_model.move:35
    =     at tests/sources/functional/serialize_model.move:26: bcs_test1_incorrect
    =         v1 = <redacted>
    =         v2 = <redacted>
    =     at tests/sources/functional/serialize_model.move:28: bcs_test1_incorrect
    =     at tests/sources/functional/serialize_model.move:28: bcs_test1_incorrect
    =         s1 = <redacted>
    =     at tests/sources/functional/serialize_model.move:29: bcs_test1_incorrect
    =     at tests/sources/functional/serialize_model.move:29: bcs_test1_incorrect
    =         s2 = <redacted>
    =     at tests/sources/functional/serialize_model.move:30: bcs_test1_incorrect
    =         result_1 = <redacted>
    =         result_2 = <redacted>
    =     at tests/sources/functional/serialize_model.move:31: bcs_test1_incorrect
    =     at tests/sources/functional/serialize_model.move:33
    =     at tests/sources/functional/serialize_model.move:34
